# deep-galerkin-pricing

./: README.md
deep_galerkin_project/: .gitignore  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  LINKEDIN_POST.md  Makefile  PROJECT_SUMMARY.md  README.md  README_PITCH.md  pyproject.toml  requirements.txt
deep_galerkin_project/.github/workflows/: ci.yml
deep_galerkin_project/api/: __init__.py  main.py
deep_galerkin_project/dgmlib/: __init__.py
deep_galerkin_project/dgmlib/configs/: bs_american.yaml  bs_barrier.yaml  bs_european.yaml  heston_european.yaml
deep_galerkin_project/dgmlib/inference/: __init__.py  service.py
deep_galerkin_project/dgmlib/loss/: __init__.py  residuals.py
deep_galerkin_project/dgmlib/models/: __init__.py  dgm.py  mlp_baseline.py
deep_galerkin_project/dgmlib/pde/: __init__.py  base_pde.py  black_scholes.py  black_scholes_american.py  black_scholes_barrier.py  heston.py
deep_galerkin_project/dgmlib/sampling/: __init__.py  curriculum.py  latin_hypercube.py  sobol.py
deep_galerkin_project/dgmlib/training/: __init__.py  callbacks.py  metrics.py  trainer.py
deep_galerkin_project/dgmlib/utils/: __init__.py  autodiff.py  config.py  numerics.py  plots.py  seeds.py
deep_galerkin_project/docs/: DEPLOYMENT.md  american_obstacle_method.md  benchmarking.md  dgm_architecture.md  math_black_scholes.md
deep_galerkin_project/rl_examples/: __init__.py  deep_hedging_env.py  train_ppo.py
deep_galerkin_project/scripts/: __init__.py  evaluate.py  generate_test_data.py  price_cli.py  quick_validate.py  run_demo.py  train.py  validate_model.py  visualize_pricing_surface.py
deep_galerkin_project/test_data/: scenarios.json
deep_galerkin_project/tests/: __init__.py  conftest.py  test_black_scholes_prices.py  test_dgm_layer_shapes.py  test_greeks_consistency.py  test_pde_residuals.py
deep_galerkin_project/tests/property_based/: test_boundary_limits.py  test_monotonicity_strike.py  test_put_call_parity.py
deep_galerkin_project/ui/: __init__.py  app.py
deep_galerkin_project/validation_results/: validation_summary.json
